[gd_scene load_steps=9 format=3 uid="uid://b2rrcc82jvx4k"]

[ext_resource type="Script" uid="uid://clvpoxthcdpcn" path="res://mundo_2.gd" id="1_jcb7u"]
[ext_resource type="Script" uid="uid://bwvkvnjbkl567" path="res://jugador.gd" id="1_q0qo4"]
[ext_resource type="Texture2D" uid="uid://m2teokl3kd8n" path="res://carretera.jpg" id="1_v7ikv"]
[ext_resource type="Script" uid="uid://but7sos2phn5q" path="res://parallax_background.gd" id="1_vhn5n"]
[ext_resource type="Texture2D" uid="uid://q1ndqnxk5v6a" path="res://bus.png" id="5_jcb7u"]
[ext_resource type="AudioStream" uid="uid://dchksq8uu081i" path="res://marimba.mp3" id="6_1s624"]
[ext_resource type="AudioStream" uid="uid://dnv4m61njv6ud" path="res://impact.mp3" id="7_54eo1"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vhn5n"]
size = Vector2(84.75, 202.82031)

[node name="Mundo" type="Node2D"]
script = ExtResource("1_jcb7u")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
script = ExtResource("1_vhn5n")

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2(0, 1000)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2(4, 1)
texture = ExtResource("1_v7ikv")
centered = false

[node name="Jugador" type="CharacterBody2D" parent="."]
script = ExtResource("1_q0qo4")

[node name="Sprite2D" type="Sprite2D" parent="Jugador"]
position = Vector2(124.34375, 804.49023)
scale = Vector2(0.5906251, 0.638039)
texture = ExtResource("5_jcb7u")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Jugador"]
position = Vector2(124.625, 801.58984)
shape = SubResource("RectangleShape2D_vhn5n")

[node name="Timer" type="Timer" parent="."]
wait_time = 1.5
autostart = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ScoreLabel" type="Label" parent="CanvasLayer"]
offset_left = 481.0
offset_top = 10.0
offset_right = 558.0
offset_bottom = 33.0
text = "Metros : 0"

[node name="RestartButton" type="Button" parent="CanvasLayer"]
process_mode = 3
visible = false
offset_left = 246.0
offset_top = 425.0
offset_right = 351.0
offset_bottom = 456.0
text = "REINTENTAR"

[node name="MusicaFondo" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_1s624")
autoplay = true

[node name="SonidoChoque" type="AudioStreamPlayer" parent="."]
process_mode = 3
stream = ExtResource("7_54eo1")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="pressed" from="CanvasLayer/RestartButton" to="." method="_on_restart_button_pressed"]
